--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,6 +17,7 @@
 @import 'pages/foodbank.scss';
 @import 'pages/foodbank-id.scss';
 @import 'pages/create-goodie.scss';
+@import 'pages/thankyou.scss';
 // Partials
 @import 'partials/menu.scss';
 @import 'partials/map.scss';
