--- a/resources/sass/globals.scss
+++ b/resources/sass/globals.scss
@@ -73,6 +73,30 @@ h5 {
     text-decoration: none;
     transition: all 0.3s;
 }
+
+.button3 {
+    background-color: #00a896;
+    padding: 10px 15px;
+    color: white;
+    border: 2px solid #00a896;
+    border-radius: 40px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 0.3s;
+    margin-bottom: 0.5rem;
+}
+
+.button3:hover {
+    background-color: white;
+    padding: 10px 15px;
+    color: #00a896;
+    border: 2px solid #00a896;
+    border-radius: 40px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 0.3s;
+}
+
 input[type=text]:focus,
 input[type=email]:focus,
 input[type=name]:focus,
