--- a/resources/sass/pages/code-show.scss
+++ b/resources/sass/pages/code-show.scss
@@ -1,63 +1,138 @@
-body {
-    margin: 0px;
-    font-family: "Arial";
-  }
-  
-  .example {
-    padding: 20px;
-  }
-  
-  input {
-    &[type="button"] {
-      padding: 5px 10px;
-      margin: 10px 5px;
-      border-radius: 5px;
-      cursor: pointer;
-      background: #ddd;
-      border: 1px solid #ccc;
-  
-      &:hover {
-        background: #ccc;
-      }
+.code-show {
+    .example {
+        padding: 20px;
     }
-  }
-  
-  .confirm {
-    display: none;
-  
-    > div {
-      &:first-of-type {
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, 0.5);
-        top: 0px;
-        left: 0px;
-      }
-  
-      &:last-of-type {
-        padding: 10px 20px;
-        background: white;
-        position: absolute;
-        width: auto;
-        height: auto;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        border-radius: 5px;
-        border: 1px solid #333;
-  
-        div {
-          &:first-of-type {
-            min-width: 150px;
-            padding: 10px;
-          }
-  
-          &:last-of-type {
-            text-align: right;
-          }
+
+    h1 {
+        color: white;
+    }
+
+    .card {
+        margin-top: 60px;
+        border: none;
+        border-radius: 0;
+    }
+
+    .button-div {
+        margin-bottom: 30px !important;
+    }
+
+    .card-2 {
+        margin-top: 20px !important;
+    }
+
+    input {
+        &[type="button"] {
+            padding: 5px 10px;
+            margin: 10px 5px;
+            border-radius: 5px;
+            cursor: pointer;
+            background: #ddd;
+            border: 1px solid #ccc;
+
+            &:hover {
+                background: #ccc;
+            }
         }
-      }
     }
-  }
-  
+
+    .heading-div {
+        a {
+            color: #00a896;
+        }
+    }
+
+    .delivered-btn {
+        margin: 20px 0;
+    }
+
+    .col-lg-12 {
+        padding: 0;
+
+        #map-code {
+            margin-top: 0 !important;
+        }
+    }
+
+    .qr-code-div {
+        padding: 2rem;
+    }
+
+    #btn-direction {
+        background-color: #00a896;
+        color: white;
+        padding: 1rem;
+        border: none;
+        border-radius: 0;
+        text-align: center;
+        text-decoration: none;
+        margin: 0.5rem;
+    }
+
+    .confirm {
+        display: none;
+
+        >div {
+            &:first-of-type {
+                position: fixed;
+                width: 100%;
+                height: 100%;
+                background: rgba(0, 0, 0, 0.5);
+                top: 0px;
+                left: 0px;
+            }
+
+            &:last-of-type {
+                padding: 10px 20px;
+                background: white;
+                position: absolute;
+                width: auto;
+                height: auto;
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, -50%);
+                border-radius: 5px;
+                border: 1px solid #333;
+
+                div {
+                    &:first-of-type {
+                        min-width: 150px;
+                        padding: 10px;
+                    }
+
+                    &:last-of-type {
+                        text-align: right;
+                    }
+                }
+            }
+        }
+    }
+
+
+
+    @media screen and (min-width: 992px) {
+        #delete-form {
+            position: absolute;
+            right: 5px;
+            top: 5px;
+        }
+    }
+
+    @media screen and (max-width: 991px) {
+        .heading-div {
+            display: grid;
+        }
+
+        #delete-form {
+            margin: 0.5rem auto !important;
+
+            button {
+                width: 100px;
+                padding-top: 10px;
+                padding-bottom: 10px;
+                margin-bottom: 0.5rem;
+            }
+        }
+    }
+
+}
