--- a/resources/sass/pages/dashboard.scss
+++ b/resources/sass/pages/dashboard.scss
@@ -1,17 +1,23 @@
-.rating {
-  unicode-bidi: bidi-override;
-  direction: rtl;
-  font-size: 20px;
+.dashboard-index {
+  .card-header h1 {
+    color: black;
+  }
+  .rating {
+    unicode-bidi: bidi-override;
+    direction: rtl;
+    font-size: 20px;
+  }
+  .rating > span {
+    position: relative;
+    width: 1.1em;
+  }
+  .rating > span:hover:before,
+  .rating > span:hover ~ span:before {
+    content: "\2605";
+    position: absolute;
+  }
 }
-.rating > span {
-  position: relative;
-  width: 1.1em;
-}
-.rating > span:hover:before,
-.rating > span:hover ~ span:before {
-   content: "\2605";
-   position: absolute;
-}
+
 
 @media screen and (max-width: 692px) {
     .rating {
