--- a/resources/sass/pages/foodbank-id.scss
+++ b/resources/sass/pages/foodbank-id.scss
@@ -2,6 +2,7 @@
     .card {
         border-radius: 0 !important;
         border: none;
+        margin-top: 60px;
 
         a:hover {
             text-decoration: none;
@@ -39,5 +40,57 @@
 
     .donate-to-this {
         margin-top: 17px;
+    }
+}
+
+@media screen and(max-width: 991px) {
+    .foodbank-id {
+        .donate-to-this {
+            width: 80%;
+        }
+    }
+}
+
+@media screen and(max-width: 556px) {
+    .foodbank-id {
+        .details-div {
+            flex-direction: column;
+
+            .details-list {
+                margin-bottom: 20px;
+            }
+
+            .donate-to-this {
+                width: 100%;
+                text-align: center;
+                margin: 15px 0;
+            }
+        }
+    }
+}
+
+@media screen and(max-width: 378px) {
+    .foodbank-id {
+        .donate-to-this {
+
+            .button2 {
+                font-size: 12px;
+                padding: 12px;
+            }
+        }
+    }
+}
+
+@media screen and(max-width: 345px) {
+    .foodbank-id {
+        .details-list {}
+
+        .donate-to-this {
+            .button2 {
+                font-size: 10px;
+                padding: 10px;
+                margin: 10px 0;
+            }
+        }
     }
 }
