--- a/resources/sass/pages/code-show.scss
+++ b/resources/sass/pages/code-show.scss
@@ -134,5 +134,22 @@
             }
         }
     }
+    @media screen and (max-width: 420px) {
+        padding: 0.5rem;
+        .col-md-8 {
+            padding: 0px !important;
+        }
+        .card-body {
+            font-size: 13px !important;
+            padding: 0.75rem !important;
+
+            .delivered-btn {
+                a {
+                    padding: 5px 9px !important;
+                    font-size: 11px !important;
+                }
+            }
+        }
+    }
 
 }
