--- a/resources/sass/partials/map-code.scss
+++ b/resources/sass/partials/map-code.scss
@@ -4,4 +4,8 @@
     height: 400px !important;
     width: 100% !important;
     margin-top: 20px !important;
-    }
+}
+#map-code img
+{
+    max-width : none;
+}
