Seeders + opening hours + styling/responsive

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,6 +18,7 @@
 @import 'pages/foodbank-id.scss';
 @import 'pages/create-goodie.scss';
 @import 'pages/thankyou.scss';
+@import 'pages/leaderboard.scss';
 // Partials
 @import 'partials/menu.scss';
 @import 'partials/map.scss';
