--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4002,8 +4002,29 @@ input[type=password]:focus {
   border: none;
 }
 
+.foodbanks-page .card .card-title {
+  font-size: 20px !important;
+}
+
 .foodbanks-page .card a:hover {
   text-decoration: none;
+}
+
+.foodbanks-page .links .page-link {
+  background-color: #fff !important;
+  color: #00a896 !important;
+}
+
+.foodbanks-page .links .active .page-link {
+  border-color: black !important;
+}
+
+@media screen and (max-width: 1100px) {
+  .foodbanks-page .card-deck {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 0.5rem;
+  }
 }
 
 .foodbank-id .card {
@@ -4041,10 +4062,16 @@ input[type=password]:focus {
 .foodbank-id .details-div {
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
 }
 
 .foodbank-id .donate-to-this {
-  margin-top: 17px;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+.foodbank-id .foodbank-edit textarea {
+  width: 100%;
 }
 
 @media screen and (max-width: 991px) {
@@ -4054,10 +4081,6 @@ input[type=password]:focus {
 }
 
 @media screen and (max-width: 556px) {
-  .foodbank-id .details-div {
-    flex-direction: column;
-  }
-
   .foodbank-id .details-div .details-list {
     margin-bottom: 20px;
   }
@@ -4295,6 +4318,27 @@ input[type=password]:focus {
   margin-top: 50px !important;
   margin-bottom: 50px !important;
   text-align: center !important;
+}
+
+.leaderboard-page .title {
+  text-align: center;
+  color: #fff;
+  font-weight: 500;
+  font-size: 3rem;
+}
+
+.leaderboard-page .title-all-time {
+  margin-top: 30px;
+}
+
+.leaderboard-page .row strong {
+  color: #fff;
+}
+
+@media screen and (max-width: 522px) {
+  .leaderboard-page .title {
+    font-size: 2rem !important;
+  }
 }
 
 .notification {
