--- a/resources/sass/pages/foodbank.scss
+++ b/resources/sass/pages/foodbank.scss
@@ -14,9 +14,29 @@
     .card {
         border-radius: 0 !important;
         border: none;
-
+        .card-title {
+            font-size: 20px !important;
+        }
         a:hover {
             text-decoration: none;
+        }
+    }
+    .links {
+        .page-link {
+            background-color: #fff !important;
+            color: #00a896 !important;
+        }
+        .active {
+            .page-link {
+                border-color: black !important;
+            }
+        }
+    }
+    @media screen and (max-width: 1100px){
+        .card-deck {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-gap: .5rem;
         }
     }
 }
